--- a/src/html/layouts/_html.html
+++ b/src/html/layouts/_html.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Trialem | {{pageTitle}}</title>
-	<link rel="stylesheet" href="/src/styles/umain.scss">
+	<link rel="stylesheet" href="/src/styles/main.scss">
 </head>
 
 <body class=" {{pageClass}}">
