--- a/src/html/layouts/header/_header.html
+++ b/src/html/layouts/header/_header.html
@@ -1,3 +1,28 @@
 <header class="header">
-
+	<div class="header-top">
+		<div class="container header-top__inner">
+			<ul class="contact-info">
+				<li><a class="contact-info__link icon icon-location" href="https://maps.app.goo.gl/3WKyksXFsd57rvu18">221
+						Beker
+						St, Los Angeles,
+						USA</a></li>
+				<li><a class="contact-info__link icon icon-phone" href="tel:80012384546">800 1238 45 46</a></li>
+			</ul>
+			<include src="html/components/social/_index.html"></include>
+		</div>
+	</div>
+	<div class="header-bottom">
+		<div class="container header-bottom__inner">
+			<nav class="nav">
+				<include src="html/components/logo/_index.html"></include>
+				<ul class="menu">
+					<li><a class="menu__link" href="/">home</a></li>
+					<li><a class="menu__link" href="/about.html">about</a></li>
+					<li><a class="menu__link" href="/bicycles.html">bicycles</a></li>
+					<li><a class="menu__link" href="/services.html">services</a></li>
+					<li><a class="menu__link" href="/contacts.html">contacts</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
 </header>
