--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,14 +1,8 @@
 :root {
-  
+	--ff-primary: 'Roboto', sans-serif;
+	--ff-secondary: 'Anton', sans-serif;
+
+	--c-white: #fff;
+	--c-lightgray: #b2b2b9;
+	--c-pink: #FF285B;
 }
-
-
-
-
-
-
-
-
-
-
-
