--- a/src/html/layouts/footer/_footer.html
+++ b/src/html/layouts/footer/_footer.html
@@ -1,3 +1,81 @@
 <footer class="footer">
-
+	<section>
+		<h2 class="sr-only">Misc information</h2>
+		<div class="container footer__grid">
+			<div class="footer__group">
+				<div class="footer-details">
+					<include src="html/components/logo/_index.html"></include>
+					<p class="footer-details__text">At nemore iriure luptatum nam, at iudico
+						albucius console pericula this is partiendo
+						constituam at per.</p>
+					<include src="html/components/social/_index.html"></include>
+				</div>
+			</div>
+			<div class="footer__group">
+				<div class="insta-blog">
+					<h3 class="footer-title">Instagram</h3>
+					<ul class="insta-blog__list">
+						<li>
+							<img class="insta-blog__img" src="/src/assets/images/bicycles/p-1.webp" alt="bicycle picture"
+								width="100" height="75" loading="lazy">
+						</li>
+						<li>
+							<img class="insta-blog__img" src="/src/assets/images/bicycles/p-2.webp" alt="bicycle picture"
+								width="100" height="75" loading="lazy">
+						</li>
+						<li>
+							<img class="insta-blog__img" src="/src/assets/images/bicycles/p-3.webp" alt="bicycle picture"
+								width="100" height="75" loading="lazy">
+						</li>
+						<li>
+							<img class="insta-blog__img" src="/src/assets/images/bicycles/p-4.webp" alt="bicycle picture"
+								width="100" height="75" loading="lazy">
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="footer__group">
+				<address class="contacts">
+					<h3 class="footer-title">Contact Us</h3>
+					<ul class="contacts__list">
+						<li>
+							<span class="color-accent fw-700">Phone: </span><a class="contacts__link" href="tel:+10452241267">+
+								1 (045) – 224 – 12 –
+								67</a>
+						</li>
+						<li>
+							<span class="color-accent fw-700">Address: </span><a class="contacts__link"
+								href="https://maps.app.goo.gl/beNnWka5sEmaEMAL6" target="_blank">470 Lucy Forks,<br>
+								Patriciafurt,
+								YC7B 3UT</a>
+						</li>
+						<li>
+							<span class="color-accent fw-700">Mail: </span>
+							<a class="contacts__link" href="mailto:template@monster.com">template@monster.com</a>
+						</li>
+					</ul>
+				</address>
+			</div>
+			<div class="footer__group">
+				<div class="subscribe">
+					<h3 class="footer-title">Subscribe</h3>
+					<form class="subscribe-form">
+						<div class="subscribe-form__group">
+							<label class="sr-only" for="email">Enter your email</label>
+							<input class="subscribe-form__input" id="email" type="email" name="email" placeholder="Your mail"
+								required>
+							<button class="subscribe-form__btn" type="submit">
+								<span class="sr-only">submit form</span>
+							</button>
+						</div>
+					</form>
+					<p>Nam, at iudico albucius pericula at nemore
+						iriure luptatum.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div class="container">
+		<p class="copy">Zemez ©. All rights reserved.</p>
+	</div>
 </footer>
