--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,30 +1,35 @@
-@use "../mixins"as*;
+@use "../mixins" as*;
 
 html,
 body {
-  scroll-behavior: smooth;
-  overscroll-behavior-y: none;
+	scroll-behavior: smooth;
+	overscroll-behavior-y: none;
 }
 
 body {
-  font-family: var(--ff-primary);
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.5;
-  color: var(--c-primary);
-  background-color: var(--c-white);
-  min-width: 320px;
+	font-family: var(--ff-primary);
+	font-weight: 400;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 1.5;
+	color: var(--c-primary);
+	background-color: var(--c-white);
+	min-width: 320px;
 }
 
 .container {
-  margin: 0 auto;
-  padding: 0 15px;
-  width: 100%;
-  max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 15px;
+	width: 100%;
+	max-width: 1200px;
 }
 
 .wrapper {
-  position: relative;
-  overflow-x: hidden;
+	position: relative;
+	overflow-x: hidden;
+	height: 100%;
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows: 1fr auto;
+	min-height: 100svh;
 }
