--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -15,6 +15,14 @@
 	color: var(--c-pink);
 }
 
+.color-gray {
+	color: var(--c-lightgray);
+}
+
+.color-white {
+	color: var(--c-white);
+}
+
 .fw-700 {
 	font-weight: 700;
 }
