Add rental section

--- a/src/html/pages/home/about/_about.scss
+++ b/src/html/pages/home/about/_about.scss
@@ -7,7 +7,7 @@
 		background-image: url('/src/assets/images/home/about-bg.webp');
 		background-repeat: no-repeat;
 		background-size: 600px;
-		background-position: left center;
+		background-position: left 15px center;
 	}
 
 	.content {
