Add feedback section

--- a/src/html/layouts/_html.html
+++ b/src/html/layouts/_html.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Trialem | {{pageTitle}}</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="/src/styles/main.scss">
 </head>
 
@@ -14,6 +15,8 @@
 		<block name="main"></block>
 		<include src="html/layouts/footer/_footer.html"></include>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+	<script src="/src/scripts/main.js"></script>
 </body>
 
 </html>
