--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -3,6 +3,7 @@
 	--ff-secondary: 'Anton', sans-serif;
 
 	--c-white: #fff;
+	--c-dark: #212223;
 	--c-lightgray: #b2b2b9;
 	--c-gray: #62656A;
 	--c-pink: #FF285B;
