--- a/src/html/pages/home/rental/_rental.scss
+++ b/src/html/pages/home/rental/_rental.scss
@@ -2,7 +2,7 @@
 
 .rental {
 	padding-block: 80px 130px;
-	background-image: linear-gradient(90deg, rgba(56, 28, 117, 1) 94%, rgba(255, 255, 255, 1) 94%);
+	background-image: linear-gradient(90deg, var(--c-blue) 94%, rgba(255, 255, 255, 1) 94%);
 
 	&__inner {
 		display: flex;
