--- a/src/html/pages/home/request/_request.scss
+++ b/src/html/pages/home/request/_request.scss
@@ -10,7 +10,7 @@
 		right: 0;
 		height: 600px;
 		z-index: -1;
-		background-image: linear-gradient(90deg, rgba(56, 28, 117, 1) 94%, rgba(255, 255, 255, 1) 94%);
+		background-image: linear-gradient(90deg, var(--c-blue) 94%, rgba(255, 255, 255, 1) 94%);
 	}
 
 	&__inner {
