Add request-bike section

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -8,5 +8,7 @@
 	--c-gray: #62656A;
 	--c-pink: #FF285B;
 	--c-blue: #381C75;
+	--c-lightblue: #F2FAFF;
+	--c-cadetblue: #9CAAC0;
 	--c-purple: #A790DA;
 }
