Add bike card hover

--- a/src/html/components/bike-card/_index.html
+++ b/src/html/components/bike-card/_index.html
@@ -8,7 +8,7 @@
 			<div class="bike-card__price">
 				<span class="bike-card__cost">$ {{bikePrice}}</span> / Days
 			</div>
-			<button class="btn btn--white">rent</button>
+			<button class="bike-card__btn btn btn--white">rent</button>
 		</div>
 	</div>
 </article>
