--- a/src/html/components/bike-card/_index.scss
+++ b/src/html/components/bike-card/_index.scss
@@ -1,8 +1,17 @@
+@use '../../../styles/mixins' as*;
+
 .bike-card {
+	position: relative;
 	max-width: 280px;
 	width: 100%;
 	padding: 16px;
 	box-shadow: 0 0 32px 8px rgba(0, 0, 0, 0.08);
+
+	@include hover {
+		.bike-card__img {
+			transform: scale(1.1) translateY(-4px);
+		}
+	}
 
 	.btn {
 		padding: 5px 14px;
@@ -12,6 +21,8 @@
 
 	&__img {
 		margin-bottom: 24px;
+		transition: transform 0.3s ease-in-out 0s;
+
 	}
 
 	&__content {
@@ -42,5 +53,16 @@
 
 	&__cost {
 		font-weight: 700;
+	}
+
+	&__btn {
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
 	}
 }
