Add adaptability for header

--- a/src/html/layouts/header/_header.html
+++ b/src/html/layouts/header/_header.html
@@ -2,7 +2,8 @@
 	<div class="header-top">
 		<div class="container header-top__inner">
 			<ul class="contact-info">
-				<li><a class="contact-info__link icon icon-location" href="https://maps.app.goo.gl/3WKyksXFsd57rvu18">221
+				<li><a class="contact-info__link icon icon-location" target="_blank"
+						href="https://maps.app.goo.gl/3WKyksXFsd57rvu18">221
 						Beker
 						St, Los Angeles,
 						USA</a></li>
@@ -15,6 +16,9 @@
 		<div class="container header-bottom__inner">
 			<nav class="nav">
 				<include src="html/components/logo/_index.html"></include>
+				<button class="mobile-nav-btn">
+					<div class="nav-icon"></div>
+				</button>
 				<ul class="menu">
 					<li><a class="menu__link" href="/">home</a></li>
 					<li><a class="menu__link" href="/about.html">about</a></li>
@@ -26,3 +30,4 @@
 		</div>
 	</div>
 </header>
+<include src="html/components/mobile-nav/_index.html"></include>
