--- a/src/html/layouts/header/_index.scss
+++ b/src/html/layouts/header/_index.scss
@@ -3,7 +3,7 @@
 .header {
 	background-color: var(--c-dark);
 	color: var(--c-white);
-	z-index: 10;
+	z-index: 999;
 }
 
 .header-top {
@@ -20,9 +20,23 @@
 	display: flex;
 	gap: 40px;
 
+	@include rmax($xl) {
+		font-size: 14px;
+	}
+
+	@include rmax($md) {
+		font-size: 0;
+		gap: 15px;
+	}
+
+	@include rmax($xs) {
+		gap: 0;
+	}
+
 	&__link {
 		font-weight: 300;
 		transition: color 0.3s ease-in-out 0s;
+		gap: 10px;
 
 		&:before {
 			background-color: var(--c-lightgray);
@@ -31,11 +45,16 @@
 		@include hover {
 			color: var(--c-pink);
 		}
+
 	}
 }
 
 .header-bottom {
 	padding-block: 30px;
+
+	@include rmax($md) {
+		padding-block: 12px;
+	}
 }
 
 .nav {
@@ -47,6 +66,14 @@
 .menu {
 	display: flex;
 	gap: 32px;
+
+	@include rmax($md) {
+		gap: 24px;
+	}
+
+	@include rmax($sm) {
+		display: none;
+	}
 
 	&__link {
 		font-weight: 300;
