--- a/src/styles/mixins/_size.scss
+++ b/src/styles/mixins/_size.scss
@@ -1,19 +1,21 @@
-$maxValue: 1440;
-$minValue: 360;
+$maxValue: 1170;
+$minValue: 320;
 
 @function sizeMax($max, $min, $wmax: $maxValue, $wmin: $minValue) {
-  $size: calc(#{$min}px + (#{$max} - #{$min}) * ((100vw - #{$wmin}px) / (#{$wmax} - #{$wmin})));
-  @return $size;
+	$size: calc(#{$min}px + (#{$max} - #{$min}) * ((100vw - #{$wmin}px) / (#{$wmax} - #{$wmin})));
+	@return $size;
 }
 
 @mixin size($propName, $max, $min, $stopSize: $maxValue) {
-  @if $max == $min {
-    #{$propName}: #{$max}px;
-  } @else {
-    #{$propName}: sizeMax($max, $min);
+	@if $max ==$min {
+		#{$propName}: #{$max}px;
+	}
 
-    @media (min-width: #{$stopSize}px) {
-      #{$propName}: #{$max}px;
-    }
-  }
+	@else {
+		#{$propName}: sizeMax($max, $min);
+
+		@media (min-width: #{$stopSize}px) {
+			#{$propName}: #{$max}px;
+		}
+	}
 }
