Improve why section bg

--- a/src/html/sections/why/_why.scss
+++ b/src/html/sections/why/_why.scss
@@ -8,7 +8,7 @@
 	background-position: left 15px top 120px, center;
 
 	@include rmin(1400) {
-		background-size: 800px 640px, 94% 91%;
+		background-size: clamp(37.5rem, 3.846rem + 38.462vw, 50rem) clamp(35.625rem, 23.846rem + 13.462vw, 40rem), 94% 91%;
 		background-position: left 120px top 120px, right top;
 	}
 
@@ -55,8 +55,10 @@
 	}
 
 	.title {
-		&:before {
-			margin-inline: auto;
+		@include rmax($sm) {
+			&:before {
+				margin-inline: auto;
+			}
 		}
 	}
 }
