--- a/src/html/sections/feedback/_feedback.scss
+++ b/src/html/sections/feedback/_feedback.scss
@@ -1,15 +1,36 @@
 @use '../../../styles/mixins' as*;
 
 .feedback {
-	padding-block: 80px 60px;
+	padding-block: 80px 50px;
+
+	@include rmax($xs) {
+		padding-block: 60px 30px;
+	}
 
 	&__inner {
 		display: grid;
 		grid-template-columns: 300px 860px;
+
+		@include rmax($xl) {
+			grid-template-columns: 1fr;
+		}
+	}
+
+	.content {
+		@include rmax($xl) {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
 	}
 
 	.title {
-		margin-bottom: 35px;
+		@include rmax($xl) {
+			&:before {
+				margin-inline: auto;
+			}
+		}
 	}
 
 	.slider-actions {
@@ -62,6 +83,7 @@
 
 	.slider {
 		padding-block: 30px;
+		overflow: hidden;
 	}
 
 	.swiper-wrapper {
