--- a/src/html/sections/rental/_rental.scss
+++ b/src/html/sections/rental/_rental.scss
@@ -4,7 +4,7 @@
 	padding-block: 80px 130px;
 	background-color: var(--c-blue);
 
-	@include rmin($xl) {
+	@include rmin(1400) {
 		background-image: linear-gradient(90deg, var(--c-blue) 94%, rgba(255, 255, 255, 1) 94%);
 		background-color: transparent;
 	}
