--- a/src/html/sections/request/_request.scss
+++ b/src/html/sections/request/_request.scss
@@ -1,6 +1,16 @@
+@use '../../../styles/mixins' as*;
+
 .request {
 	position: relative;
 	padding-block: 80px 100px;
+
+	@include rmax($sm) {
+		padding-block: 80px;
+	}
+
+	@include rmax($xs) {
+		padding-block: 60px;
+	}
 
 	&:before {
 		content: '';
@@ -10,18 +20,45 @@
 		right: 0;
 		height: 600px;
 		z-index: -1;
-		background-image: linear-gradient(90deg, var(--c-blue) 94%, rgba(255, 255, 255, 1) 94%);
+		background-color: var(--c-blue);
+
+		@include rmin(1400) {
+			background-image: linear-gradient(90deg, var(--c-blue) 94%, rgba(255, 255, 255, 1) 94%);
+			background-color: transparent;
+		}
+
+		@include rmax($xl) {
+			height: 100%;
+		}
 	}
 
 	&__inner {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		gap: 16px;
+		display: flex;
+		gap: 25px;
+
+		@include rmax($xl) {
+			align-items: center;
+		}
+
+		@include rmax($md) {
+			justify-content: center;
+			flex-wrap: wrap-reverse;
+			gap: 40px;
+		}
 	}
 
-	&__map {}
+	&__map {
+		aspect-ratio: 1;
+		width: 100%;
+		height: 100%;
+
+		@include rmin($md-above) {
+			max-width: 575px;
+		}
+	}
 
 	.form-wrapper {
-		padding-left: 70px;
+		padding-left: clamp(0rem, -5.556rem + 11.574vw, 3.125rem);
+		min-width: 260px;
 	}
 }
