Fix padding for discount section

--- a/src/html/pages/about/discount/_discount.scss
+++ b/src/html/pages/about/discount/_discount.scss
@@ -9,6 +9,10 @@
 		background-position: left;
 	}
 
+	@include rmax($xs) {
+		padding-block: 60px;
+	}
+
 	&__inner {
 		@include rmax($md) {
 			display: flex;
