--- a/src/html/pages/services/advantages/_advantages.scss
+++ b/src/html/pages/services/advantages/_advantages.scss
@@ -1,10 +1,30 @@
+@use '../../../../styles/mixins' as*;
+
 .services-advantages {
 
 	.advantages__inner {
-		padding-block: 60px;
-		margin-bottom: 40px;
-		justify-content: flex-end;
-		background-image: url('/src/assets/images/services/services-advantages.webp');
-		background-position: left 15px center;
+		position: relative;
+		padding-block: 60px 100px;
+
+		@include rmin($lg-above) {
+			justify-content: flex-end;
+
+			&:before {
+				background-position: left 15px top calc(50% - 20px);
+				opacity: 0.7;
+			}
+		}
+
+		@include rmax($sm) {
+			padding-block: 60px 80px;
+		}
+
+		@include rmax($xs) {
+			padding-block: 40px 60px;
+		}
+
+		&:before {
+			background-image: url('/src/assets/images/services/services-advantages.webp');
+		}
 	}
 }
