--- a/src/html/pages/contacts/map/_map.scss
+++ b/src/html/pages/contacts/map/_map.scss
@@ -1,3 +1,19 @@
+@use '../../../../styles/mixins' as*;
+
 .map {
-	padding-bottom: 100px;
+	padding-bottom: 80px;
+
+	&__frame {
+		aspect-ratio: 1.95;
+		width: 100%;
+		height: 100%;
+
+		@include rmax($xs) {
+			aspect-ratio: 1;
+		}
+	}
+
+	@include rmax($xs) {
+		padding-bottom: 60px;
+	}
 }
