--- a/src/html/layouts/_html.html
+++ b/src/html/layouts/_html.html
@@ -7,6 +7,10 @@
 	<title>Trialem | {{pageTitle}}</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="/src/styles/main.scss">
+	<link rel="apple-touch-icon" sizes="180x180" href="/src/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/src/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/src/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class=" {{pageClass}}">
