--- a/src/html/layouts/header/_header.html
+++ b/src/html/layouts/header/_header.html
@@ -19,7 +19,7 @@
 				<button class="mobile-nav-btn">
 					<div class="nav-icon"></div>
 				</button>
-				<ul class="menu">
+				<ul class="menu" id="menu">
 					<li><a class="menu__link" href="/">home</a></li>
 					<li><a class="menu__link" href="/about.html">about</a></li>
 					<li><a class="menu__link" href="/bicycles.html">bicycles</a></li>
