--- a/src/html/layouts/header/_index.scss
+++ b/src/html/layouts/header/_index.scss
@@ -4,6 +4,10 @@
 	background-color: var(--c-dark);
 	color: var(--c-white);
 	z-index: 999;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
 }
 
 .header-top {
@@ -76,6 +80,7 @@
 	}
 
 	&__link {
+		position: relative;
 		font-weight: 300;
 		font-size: 14px;
 		line-height: 1.14;
@@ -85,6 +90,18 @@
 
 		@include hover {
 			color: var(--c-pink);
+		}
+
+		&.active {
+			&:before {
+				content: '';
+				position: absolute;
+				bottom: -5px;
+				left: 0;
+				right: 0;
+				height: 2px;
+				background-color: currentColor;
+			}
 		}
 	}
 }
