Update vite config

--- a/src/html/components/logo/_index.html
+++ b/src/html/components/logo/_index.html
@@ -1,1 +1,1 @@
-<a class="logo" href="/index.html"><img src="/src/assets/images/logo.webp" width="114" height="25" alt="Trialem"></a>
+<a class="logo" href="/"><img src="/src/assets/images/logo.webp" width="114" height="25" alt="Trialem"></a>
