--- a/src/html/components/mobile-nav/_index.html
+++ b/src/html/components/mobile-nav/_index.html
@@ -1,6 +1,6 @@
 <div class="mobile-nav">
 	<ul class="mobile-nav__list">
-		<li class="mobile-nav__item"><a href="/index.html">HOME</a></li>
+		<li class="mobile-nav__item"><a href="/">HOME</a></li>
 		<li class="mobile-nav__item"><a href="/about.html">ABOUT</a></li>
 		<li class="mobile-nav__item"><a href="/bicycles.html">BICYCLES</a></li>
 		<li class="mobile-nav__item"><a href="/services.html">SERVICES</a></li>
